Switch to PDFViewFX to display the guide.pdf. Installer is now built via jpackage in classpath mode instead of using jlink because PDFViewFX depends on PDFBox which is non-modular.